# OdinBase

./: .env  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 68b3d6bc051c_create_items.py
app/: __init__.py  main.py
app/apis/api_b_grpc/srv/: main.py
app/apis/api_items/model/: items.py
app/apis/api_items/srv/: main.py
app/apis/api_router/srv/: expensive.py  main.py
app/core/: auth.py  celery.py  config.py  logger.py
app/db/: database.py
app/db/schema/: items.py
app/dependencies/grpc_service/model/: response.py
app/dependencies/grpc_service/srv/: bakery_service.py
app/model/: response.py
app/routes/: api_db.py  api_grpc.py  api_router.py  router.py
app/tests/: test_apis.py  test_functions.py  test_logger.py
bakery_grpc/: .env  Dockerfile  main.py  requirements.txt
bakery_grpc/core/: config.py
bakery_grpc/pb/: bakery_pb2.py  bakery_pb2.pyi  bakery_pb2_grpc.py
bakery_grpc/services/: bakery.py
dockerfiles/python313/: Dockerfile
